k8n/overlays/dev/sonar/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /dev/sonar
            pathType: Prefix
            backend:
              service:
                name: sonar-service
                port:
                  number: 9000
