k8n/overlays/dev/sonar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /dev/sonar(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sonar-service
            port:
              number: 9000
